[gd_scene load_steps=5 format=2]

[ext_resource path="res://TestRoom/TestResources/whitesquare.png" type="Texture" id=1]
[ext_resource path="res://Ladder/Ladder.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 8 )

[node name="Ladder" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -16 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 32, 32 )

[node name="Top" type="Area2D" parent="."]
position = Vector2( 0, -40 )
scale = Vector2( 2, 1 )
collision_layer = 16
collision_mask = 32

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top"]
shape = SubResource( 1 )

[node name="Base" type="Area2D" parent="."]
scale = Vector2( 2, 0.1 )
collision_layer = 16
collision_mask = 32
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Base"]
shape = SubResource( 2 )
[connection signal="body_entered" from="Top" to="." method="_on_Top_body_entered"]
[connection signal="body_exited" from="Top" to="." method="_on_Top_body_exited"]
[connection signal="body_entered" from="Base" to="." method="_on_Base_body_entered"]
[connection signal="body_exited" from="Base" to="." method="_on_Base_body_exited"]
